gitops/manifests/searxng/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: searxng
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    io.kompose.service: searxng
  name: searxng
  namespace: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: searxng
  strategy:
    type: Recreate
  template:
    metadata:
      annotations: {}
      labels:
        io.kompose.service: searxng
        app.kubernetes.io/name: searxng
    spec:
      containers:
        - name: searxng
          image: searxng/searxng
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/searxng/settings.yml
              subPath: settings.yml
              name: searxng-config
            - mountPath: /data
              name: searxng-claim0
      enableServiceLinks: false
      volumes:
        - name: searxng-config
          configMap:
            name: searxng-config
        - name: searxng-claim0
          persistentVolumeClaim:
            claimName: searxng-claim0
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: searxng
  name: searxng
  namespace: searxng
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: searxng
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng-ingress
  namespace: searxng
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`searxng.local.timmybtech.com`)
      kind: Rule
      services:
        - name: searxng
          port: 8080
  tls:
    secretName: local-timmybtech-com-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng-public
  namespace: searxng
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`searxng.timmybtech.com`)
      kind: Rule
      services:
        - name: searxng
          port: 8080
  tls:
    secretName: timmybtech-com-tls
